Fixed off-centered edit links window

--- a/src/styles/SCSS/style.scss
+++ b/src/styles/SCSS/style.scss
@@ -179,6 +179,7 @@
 #edit_linkContainer {
 	position: absolute;
 	display: none;
+	top: 0;
 	height: 100vh;
 	width: 100%;
 	transition: transform 0.2s;
